[package]
name = "weaver_protos_rs"
version = "1.5.7"
authors = ["Peter Somogyvari  <peter.somogyvari@accenture.com>", "Sandeep Nishad <sandeep.nishad1@ibm.com"]
edition = "2018"
license = "Apache-2.0"
description = "Rust compiled Weaver protobuf package"
documentation = "https://github.com/hyperledger-labs/weaver-dlt-interoperability/tree/main/rfcs/formats"
repository = "https://github.com/hyperledger-labs/weaver-dlt-interoperability/"
readme = "README.md"
keywords = ["weaver", "interoperability", "protobuf", "protos"]

[lib]
name = "weaverpb"
path = "src/lib.rs"

[dependencies]
tonic = {version="0.8.3",  features = ["tls"]}
prost = "0.11.8"
serde = {version="1.0.159", features = ["derive"]}